<resources>
    <string name="app_name">GotoEsig</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="authentification">Authentification</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="photo_de_profil">Photo de profil</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="ville">Ville</string>
    <string name="retour">Retour</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="title_location_permission">Permission de localisation</string>
    <string name="text_location_permission">Permission de localisation</string>
    <string name="ok">ok</string>
    <string name="ajouter_un_trajet">Ajouter un trajet</string>
    <string name="mes_trajets">Mes trajets</string>
    <string name="chercher_un_trajet">Chercher un trajet</string>
    <string name="evaluer_un_trajet">Evaluer un trajet</string>
    <string name="statistiques">Statistiques</string>



    <string name="google_maps_key">AIzaSyC_wsh_71l5Ttfmi73ANnH3nQ5OiaHSGHo</string>
    <string name="openrouteservice_key">5b3ce3597851110001cf624861a6d9e90e26460c93014e30072ff87b</string>
</resources>