<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_ajouttrajet"
            android:title="@string/ajouter_un_trajet" />
        <item
            android:id="@+id/nav_mestrajets"
            android:title="@string/mes_trajets" />
        <item
            android:id="@+id/nav_cherchertrajet"
            android:title="@string/chercher_un_trajet" />
        <item
            android:id="@+id/nav_evaluertrajet"
            android:title="@string/evaluer_un_trajet" />
        <item
            android:id="@+id/nav_statistiques"
            android:title="@string/statistiques" />
        <item
            android:id="@+id/nav_quitter"
            android:title="Quitter" />


    </group>
</menu>