<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="fr.esigelec.gotoesig.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_ajouttrajet"
        android:name="fr.esigelec.gotoesig.ui.ajouttrajet.AjoutTrajetFragment"
        android:label="@string/ajouter_un_trajet"
        tools:layout="@layout/fragment_ajout_trajet" />
    <fragment
        android:id="@+id/nav_mestrajets"
        android:name="fr.esigelec.gotoesig.ui.mestrajets.MesTrajetsFragment"
        android:label="@string/mes_trajets"
        tools:layout="@layout/fragment_mestrajets_list" />
    <fragment
        android:id="@+id/nav_cherchertrajet"
        android:name="fr.esigelec.gotoesig.ui.cherchertrajet.ChercherTrajetFragment"
        android:label="@string/chercher_un_trajet"
        tools:layout="@layout/fragment_chercher_trajet" />
    <fragment
        android:id="@+id/nav_evaluertrajet"
        android:name="fr.esigelec.gotoesig.ui.evaluertrajet.EvaluerTrajetFragment"
        android:label="@string/evaluer_un_trajet"
        tools:layout="@layout/fragment_evaluer_trajet" />
    <fragment
        android:id="@+id/nav_statistiques"
        android:name="fr.esigelec.gotoesig.ui.statistiques.StatistiquesFragment"
        android:label="@string/statistiques"
        tools:layout="@layout/fragment_statistiques" />

</navigation>