<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="30dp"
        />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/buttonSelectProfilPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_de_profil"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:hint="Email"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:hint="Mot de passe"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/inputNom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:hint="@string/nom"
        />
    <EditText
        android:id="@+id/inputPrenom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:hint="@string/pr_nom"
        />
    <EditText
        android:id="@+id/inputTel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:hint="@string/num_ro_de_t_l_phone"
        />
    <EditText
        android:id="@+id/inputVille"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:hint="@string/ville"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        >

        <Button
            android:id="@+id/buttonInscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/inscription"
            />
        <Button
            android:id="@+id/retourButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/retour"
            />

    </LinearLayout>

</LinearLayout>